// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostCreateForm.tsx should correctly change input 1`] = `
.emotion-0 {
  border: 1px solid #2d2d2d;
  border-radius: 6px;
  height: 30px;
  min-width: 240px;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #878686;
}

.emotion-0::-moz-placeholder {
  color: #878686;
}

.emotion-0:-ms-input-placeholder {
  color: #878686;
}

.emotion-0::placeholder {
  color: #878686;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border: 1px solid #2d2d2d;
  border-radius: 6px;
  width: 100%;
}

.emotion-2::-webkit-input-placeholder {
  color: #878686;
}

.emotion-2::-moz-placeholder {
  color: #878686;
}

.emotion-2:-ms-input-placeholder {
  color: #878686;
}

.emotion-2::placeholder {
  color: #878686;
}

.emotion-3 {
  padding: 0 24px;
  width: 100%;
}

.emotion-4 {
  float: right;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #007AAE;
  border: none;
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 700;
  height: 30px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  min-width: 240px;
  padding: 0;
}

.emotion-5:hover {
  background-color: #005b82;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-right: 1px solid #FFFFFF;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 30px;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div>
  <div>
    <input
      class="emotion-0"
      data-testid="title-text"
      value=""
    />
    <div
      class="emotion-1"
    >
      <textarea
        class="emotion-2"
        data-testid="post-create-form-textarea"
        rows="40"
      >
        aaaaa
      </textarea>
      <div
        class="emotion-3"
      >
        <style>
          
  .flav-md-h {
    margin: 0;
  }

        </style>
        

        <p
          class="flav-md-text flav-md-p"
        >
          aaaaa
        </p>
      </div>
    </div>
    <div
      class="emotion-4"
    >
      <div>
        <button
          class="emotion-5"
          data-testid="enable-btn"
        >
          <span
            class="emotion-6"
            data-testid="button-tapped"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            class="emotion-7"
            data-testid="button-area"
          >
            未公開のまま保存
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostCreateForm.tsx should correctly render 1`] = `
.emotion-0 {
  border: 1px solid #2d2d2d;
  border-radius: 6px;
  height: 30px;
  min-width: 240px;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: #878686;
}

.emotion-0::-moz-placeholder {
  color: #878686;
}

.emotion-0:-ms-input-placeholder {
  color: #878686;
}

.emotion-0::placeholder {
  color: #878686;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border: 1px solid #2d2d2d;
  border-radius: 6px;
  width: 100%;
}

.emotion-2::-webkit-input-placeholder {
  color: #878686;
}

.emotion-2::-moz-placeholder {
  color: #878686;
}

.emotion-2:-ms-input-placeholder {
  color: #878686;
}

.emotion-2::placeholder {
  color: #878686;
}

.emotion-3 {
  padding: 0 24px;
  width: 100%;
}

.emotion-4 {
  float: right;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #007AAE;
  border: none;
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 700;
  height: 30px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  min-width: 240px;
  padding: 0;
}

.emotion-5:hover {
  background-color: #005b82;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-right: 1px solid #FFFFFF;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 30px;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div>
  <div>
    <input
      class="emotion-0"
      data-testid="title-text"
      value=""
    />
    <div
      class="emotion-1"
    >
      <textarea
        class="emotion-2"
        data-testid="post-create-form-textarea"
        rows="40"
      />
      <div
        class="emotion-3"
      >
        <style>
          
  .flav-md-h {
    margin: 0;
  }

        </style>
        

        <p
          class="flav-md-text flav-md-p"
        />
      </div>
    </div>
    <div
      class="emotion-4"
    >
      <div>
        <button
          class="emotion-5"
          data-testid="enable-btn"
        >
          <span
            class="emotion-6"
            data-testid="button-tapped"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            class="emotion-7"
            data-testid="button-area"
          >
            未公開のまま保存
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
